fixed x-overflow

--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,8 @@
 @media only screen and (max-width: 500px){
+
+    body {
+        overflow-x: hidden;
+    }
     .container {
          display: inline;
     }
